# project-bootstrap

./: .gitignore  .mise.toml  Makefile  README.md  project_bootstrap.py  pyproject.toml
project_bootstrap/: __main__.py
project_bootstrap/templates/: node.md  python.md  swift.md
templates/: node.md  python.md  swift.md
