[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "project-bootstrap"
version = "0.0.2"
authors = [
  { name="roobert", email="roobert@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/roobert/project-bootstrap"
"Bug Tracker" = "https://github.com/roobert/project-bootstrap/issues"

[project.scripts]
project-bootstrap = "project_bootstrap:main"

[tool.setuptools]
py-modules = ["project_bootstrap"]
